--- a/cinnamon/cinnamon.css
+++ b/cinnamon/cinnamon.css
@@ -240,7 +240,9 @@ StScrollBar {
 .popup-menu,
 .popup-combo-menu {
   color: #d8dee9;
-  border-image: url("dark-assets/menu/menu.svg") 9 9 9 9; }
+  background-color: #2a2f3a;
+  border: 1px solid #1f232b;
+  border-radius: 5px; }
   .menu-arrow,
   .popup-menu-arrow {
     icon-size: 16px; }
